edge case js issue

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -21,6 +21,7 @@
     "packageAliases": {
         "Metadata Visualizer": "0Ho0N0000004CAfSAM",
         "Metadata Visualizer Auth": "0Ho0N0000004CAkSAM",
-        "Metadata Visualizer Auth@0.1.0-1": "04t0N00000177C9QAI"
+        "Metadata Visualizer Auth@0.1.0-1": "04t0N00000177C9QAI",
+        "Metadata Visualizer@0.1.0-4": "04t0N00000177DHQAY"
     }
 }
